--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 VITE_APPLICATIONINSIGHTS_INSTRUMENTATION_KEY={{APPLICATIONINSIGHTS_INSTRUMENTATION_KEY}}
 VITE_MSAL_AUTHORITY={{MSAL_AUTHORITY}}
 VITE_MSAL_CLIENT_ID={{MSAL_CLIENT_ID}}
+VITE_PUBLIC_URL={{PUBLIC_URL}}
