--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -9,10 +9,11 @@
       "customSyntax": "@stylelint/postcss-css-in-js",
       "files": [
         "src/**/*.{jsx,tsx}"
-      ]
+      ],
+      "rules": {
+        "at-rule-empty-line-before": "never",
+        "comment-no-empty": null
+      }
     }
-  ],
-  "rules": {
-    "scss/comment-no-empty": null
-  }
+  ]
 }
