--- a/babel.config.json
+++ b/babel.config.json
@@ -1,6 +1,13 @@
 {
   "plugins": [
-    "react-intl-auto"
+    "@emotion/babel-plugin",
+    [
+      "formatjs",
+      {
+        "idInterpolationPattern": "[sha512:contenthash:base64:6]",
+        "ast": true
+      }
+    ]
   ],
   "presets": [
     [
