--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "hitofude",
   "private": true,
-  "version": "1.3.2",
+  "version": "1.3.3",
   "scripts": {
     "start": "vite",
     "build": "tsc && vite build",
@@ -9,14 +9,17 @@
     "eslint:fix": "eslint src --fix",
     "stylelint": "stylelint 'src/**/*.{css,scss,jsx,tsx}'",
     "stylelint:fix": "stylelint 'src/**/*.{css,scss,jsx,tsx}' --fix",
-    "extract-messages": "extract-messages -l=en,ja -o src/translations -d en --flat true 'src/**/messages.ts'"
+    "formatjs:extract": "formatjs extract 'src/**/messages.ts' --out-file 'src/translations/en.json' --id-interpolation-pattern '[sha512:contenthash:base64:6]' --format simple",
+    "formatjs:compile": "npm run formatjs:compile-en && npm run formatjs:compile-ja",
+    "formatjs:compile-en": "formatjs compile 'src/translations/en.json' --out-file 'src/translations/compiled/en.json' --ast --format simple",
+    "formatjs:compile-ja": "formatjs compile 'src/translations/ja.json' --out-file 'src/translations/compiled/ja.json' --ast --format simple"
   },
   "dependencies": {
     "@automapper/core": "^8.7.7",
     "@automapper/pojos": "^8.7.7",
     "@azure/msal-browser": "^2.34.0",
     "@azure/msal-react": "^1.5.4",
-    "@fluentui/react-components": "^9.15.5",
+    "@fluentui/react-components": "^9.18.6",
     "@fluentui/react-icons-mdl2": "^1.3.35",
     "@fluentui/react-icons-mdl2-branded": "^1.2.33",
     "@microsoft/applicationinsights-react-js": "^3.4.1",
@@ -24,10 +27,10 @@
     "@microsoft/microsoft-graph-client": "^3.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-error-boundary": "^3.1.4",
-    "react-hook-form": "^7.43.1",
-    "react-intl": "^6.2.10",
-    "react-markdown": "^8.0.5",
+    "react-error-boundary": "^4.0.3",
+    "react-hook-form": "^7.43.8",
+    "react-intl": "^6.3.2",
+    "react-markdown": "^8.0.6",
     "react-router-dom": "^6.8.1",
     "react-syntax-highlighter": "^15.5.0",
     "react-use": "^17.4.0",
@@ -35,35 +38,36 @@
     "ress": "^5.0.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.21.0",
+    "@babel/core": "^7.21.3",
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-react": "^7.18.6",
     "@babel/preset-typescript": "^7.21.0",
+    "@emotion/babel-plugin": "^11.10.6",
     "@emotion/react": "^11.10.6",
+    "@formatjs/cli": "^6.0.4",
     "@microsoft/microsoft-graph-types": "^2.26.0",
     "@stylelint/postcss-css-in-js": "^0.38.0",
-    "@types/react": "^18.0.28",
+    "@types/react": "^18.0.31",
     "@types/react-dom": "^18.0.11",
     "@types/react-syntax-highlighter": "^15.5.6",
-    "@typescript-eslint/eslint-plugin": "^5.53.0",
-    "@typescript-eslint/parser": "^5.53.0",
+    "@typescript-eslint/eslint-plugin": "^5.57.0",
+    "@typescript-eslint/parser": "^5.57.0",
     "@vitejs/plugin-react": "^3.1.0",
-    "babel-plugin-react-intl-auto": "^3.3.0",
-    "eslint": "^8.34.0",
+    "babel-plugin-formatjs": "^10.4.0",
+    "eslint": "^8.37.0",
     "eslint-config-standard": "^17.0.0",
     "eslint-plugin-hooks": "^0.4.3",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "extract-react-intl-messages": "^4.1.1",
     "postcss": "^8.4.21",
     "postcss-scss": "^4.0.6",
-    "sass": "^1.58.3",
-    "stylelint": "^15.2.0",
+    "sass": "^1.60.0",
+    "stylelint": "^15.3.0",
     "stylelint-config-recess-order": "^4.0.0",
     "stylelint-config-standard-scss": "^7.0.1",
     "typescript": "^4.9.5",
-    "vite": "^4.1.3"
+    "vite": "^4.2.1"
   },
   "volta": {
     "node": "16.19.0"
