--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -6,7 +6,7 @@
   ],
   "overrides": [
     {
-      "customSyntax": "@stylelint/postcss-css-in-js",
+      "customSyntax": "postcss-styled-syntax",
       "files": [
         "src/**/*.{jsx,tsx}"
       ],
