--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "hitofude",
   "private": true,
-  "version": "1.3.3",
+  "version": "1.4.0",
   "scripts": {
     "start": "vite",
     "build": "tsc && vite build",
@@ -17,42 +17,44 @@
   "dependencies": {
     "@automapper/core": "^8.7.7",
     "@automapper/pojos": "^8.7.7",
-    "@azure/msal-browser": "^2.34.0",
-    "@azure/msal-react": "^1.5.4",
-    "@fluentui/react-components": "^9.18.6",
-    "@fluentui/react-icons-mdl2": "^1.3.35",
-    "@fluentui/react-icons-mdl2-branded": "^1.2.33",
+    "@azure/msal-browser": "^2.37.0",
+    "@azure/msal-react": "^1.5.7",
+    "@fluentui/react-components": "^9.20.0",
+    "@fluentui/react-icons-mdl2": "^1.3.41",
+    "@fluentui/react-icons-mdl2-branded": "^1.2.42",
     "@microsoft/applicationinsights-react-js": "^3.4.1",
     "@microsoft/applicationinsights-web": "^2.8.10",
     "@microsoft/microsoft-graph-client": "^3.0.5",
+    "bytes": "^3.1.2",
+    "monaco-editor": "^0.38.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-error-boundary": "^4.0.3",
-    "react-hook-form": "^7.43.8",
-    "react-intl": "^6.3.2",
-    "react-markdown": "^8.0.6",
-    "react-router-dom": "^6.8.1",
+    "react-error-boundary": "^4.0.4",
+    "react-hook-form": "^7.43.9",
+    "react-intl": "^6.4.2",
+    "react-markdown": "^8.0.7",
+    "react-router-dom": "^6.11.1",
     "react-syntax-highlighter": "^15.5.0",
     "react-use": "^17.4.0",
     "remark-gfm": "^3.0.1",
     "ress": "^5.0.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.21.3",
-    "@babel/preset-env": "^7.20.2",
+    "@babel/core": "^7.21.8",
+    "@babel/preset-env": "^7.21.5",
     "@babel/preset-react": "^7.18.6",
-    "@babel/preset-typescript": "^7.21.0",
-    "@emotion/babel-plugin": "^11.10.6",
-    "@emotion/react": "^11.10.6",
+    "@babel/preset-typescript": "^7.21.5",
+    "@emotion/babel-plugin": "^11.11.0",
+    "@emotion/react": "^11.11.0",
     "@formatjs/cli": "^6.0.4",
-    "@microsoft/microsoft-graph-types": "^2.26.0",
-    "@stylelint/postcss-css-in-js": "^0.38.0",
+    "@microsoft/microsoft-graph-types": "^2.31.0",
+    "@types/bytes": "^3.1.1",
     "@types/react": "^18.0.31",
     "@types/react-dom": "^18.0.11",
     "@types/react-syntax-highlighter": "^15.5.6",
-    "@typescript-eslint/eslint-plugin": "^5.57.0",
-    "@typescript-eslint/parser": "^5.57.0",
-    "@vitejs/plugin-react": "^3.1.0",
+    "@typescript-eslint/eslint-plugin": "^5.59.5",
+    "@typescript-eslint/parser": "^5.59.5",
+    "@vitejs/plugin-react": "^4.0.0",
     "babel-plugin-formatjs": "^10.4.0",
     "eslint": "^8.37.0",
     "eslint-config-standard": "^17.0.0",
@@ -62,12 +64,13 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "postcss": "^8.4.21",
     "postcss-scss": "^4.0.6",
+    "postcss-styled-syntax": "^0.4.0",
     "sass": "^1.60.0",
     "stylelint": "^15.3.0",
     "stylelint-config-recess-order": "^4.0.0",
-    "stylelint-config-standard-scss": "^7.0.1",
+    "stylelint-config-standard-scss": "^9.0.0",
     "typescript": "^4.9.5",
-    "vite": "^4.2.1"
+    "vite": "^4.3.5"
   },
   "volta": {
     "node": "16.19.0"
