--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -11,19 +11,27 @@ jobs:
     steps:
       - name: Checkout repos
         uses: actions/checkout@v3
-      - name: Setup Node.js 16.x
+      - name: Setup Node.js 18.x
         uses: actions/setup-node@v3
         with:
-          node-version: 16.x
+          node-version: 18.x
+      - name: Rewrite microsoft-identity-association.json
+        shell: pwsh
+        run: |
+          $path = 'public/.well-known/microsoft-identity-association.json'
+          $content = Get-Content -Path $path
+          $content = $content -replace "{{MSAL_CLIENT_ID}}", "${{secrets.MSAL_CLIENT_ID}}"
+          Out-File -FilePath $path -InputObject $content -Encoding UTF8
       - name: Rewrite .env
         shell: pwsh
         run: |
-          $content = Get-Content -Path .env
+          $path = '.env'
+          $content = Get-Content -Path $path
           $content = $content -replace "{{TELEMETRY_CONNECTION_STRING}}", "${{secrets.TELEMETRY_CONNECTION_STRING}}"
           $content = $content -replace "{{MSAL_AUTHORITY}}", "${{secrets.MSAL_AUTHORITY}}"
           $content = $content -replace "{{MSAL_CLIENT_ID}}", "${{secrets.MSAL_CLIENT_ID}}"
           $content = $content -replace "{{PUBLIC_URL}}", "${{secrets.PUBLIC_URL}}"
-          Out-File -FilePath .env -InputObject $content -Encoding UTF8
+          Out-File -FilePath $path -InputObject $content -Encoding UTF8
       - name: Build source
         run: |
           npm ci
