--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "hitofude",
   "private": true,
-  "version": "1.8.0",
+  "version": "1.9.0",
   "scripts": {
     "start": "vite",
     "build": "tsc && vite build",
@@ -19,19 +19,20 @@
     "@automapper/pojos": "^8.7.7",
     "@azure/msal-browser": "^3.1.0",
     "@azure/msal-react": "^2.0.3",
-    "@fluentui/react-components": "^9.30.3",
+    "@fluentui/react-components": "^9.30.4",
     "@fluentui/react-icons-mdl2": "^1.3.49",
     "@fluentui/react-icons-mdl2-branded": "^1.2.51",
     "@microsoft/applicationinsights-react-js": "^17.0.0",
     "@microsoft/applicationinsights-web": "^3.0.2",
     "@microsoft/microsoft-graph-client": "^3.0.6",
     "bytes": "^3.1.2",
+    "mime": "^3.0.0",
     "monaco-editor": "^0.41.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-error-boundary": "^4.0.11",
     "react-hook-form": "^7.46.1",
-    "react-intl": "^6.4.4",
+    "react-intl": "^6.4.6",
     "react-markdown": "^8.0.7",
     "react-router-dom": "^6.15.0",
     "react-syntax-highlighter": "^15.5.0",
@@ -40,22 +41,23 @@
     "ress": "^5.0.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.22.15",
+    "@babel/core": "^7.22.17",
     "@babel/preset-env": "^7.22.15",
     "@babel/preset-react": "^7.22.15",
     "@babel/preset-typescript": "^7.22.15",
     "@emotion/babel-plugin": "^11.11.0",
     "@emotion/react": "^11.11.1",
-    "@formatjs/cli": "^6.1.3",
+    "@formatjs/cli": "^6.1.5",
     "@microsoft/microsoft-graph-types": "^2.38.0",
     "@types/bytes": "^3.1.1",
+    "@types/mime": "^3.0.1",
     "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7",
     "@types/react-syntax-highlighter": "^15.5.7",
     "@typescript-eslint/eslint-plugin": "^6.6.0",
     "@typescript-eslint/parser": "^6.6.0",
     "@vitejs/plugin-react": "^4.0.4",
-    "babel-plugin-formatjs": "^10.5.3",
+    "babel-plugin-formatjs": "^10.5.5",
     "eslint": "^8.48.0",
     "eslint-config-standard": "^17.1.0",
     "eslint-plugin-hooks": "^0.4.3",
@@ -63,12 +65,12 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "postcss": "^8.4.29",
-    "postcss-scss": "^4.0.7",
+    "postcss-scss": "^4.0.8",
     "postcss-styled-syntax": "^0.4.0",
     "sass": "^1.66.1",
     "stylelint": "^15.10.3",
     "stylelint-config-recess-order": "^4.3.0",
-    "stylelint-config-standard-scss": "^10.0.0",
+    "stylelint-config-standard-scss": "^11.0.0",
     "typescript": "^5.2.2",
     "vite": "^4.4.9"
   },
