--- a/package.json
+++ b/package.json
@@ -18,62 +18,63 @@
   "dependencies": {
     "@automapper/core": "^8.8.1",
     "@automapper/pojos": "^8.8.1",
-    "@azure/msal-browser": "^3.9.0",
-    "@azure/msal-react": "^2.0.11",
-    "@fluentui/react-components": "^9.46.4",
-    "@fluentui/react-icons-mdl2": "^1.3.57",
-    "@fluentui/react-icons-mdl2-branded": "^1.2.59",
-    "@microsoft/applicationinsights-react-js": "^17.0.4",
-    "@microsoft/applicationinsights-web": "^3.0.8",
+    "@azure/msal-browser": "^3.14.0",
+    "@azure/msal-react": "^2.0.16",
+    "@fluentui/react-components": "^9.51.0",
+    "@fluentui/react-icons-mdl2": "^1.3.63",
+    "@fluentui/react-icons-mdl2-branded": "^1.2.65",
+    "@microsoft/applicationinsights-react-js": "^17.2.0",
+    "@microsoft/applicationinsights-web": "^3.2.1",
     "@microsoft/microsoft-graph-client": "^3.0.7",
     "bytes": "^3.1.2",
-    "mime": "^4.0.1",
-    "monaco-editor": "^0.46.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-error-boundary": "^4.0.12",
-    "react-hook-form": "^7.50.1",
-    "react-intl": "^6.6.2",
+    "mime": "^4.0.3",
+    "monaco-editor": "^0.48.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-error-boundary": "^4.0.13",
+    "react-hook-form": "^7.51.4",
+    "react-intl": "^6.6.6",
     "react-markdown": "^9.0.1",
-    "react-router-dom": "^6.22.0",
+    "react-router-dom": "^6.23.1",
     "react-syntax-highlighter": "^15.5.0",
     "react-use": "^17.5.0",
     "remark-gfm": "^4.0.0",
     "ress": "^5.0.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.23.9",
-    "@babel/preset-env": "^7.23.9",
-    "@babel/preset-react": "^7.23.3",
-    "@babel/preset-typescript": "^7.23.3",
+    "@babel/core": "^7.24.5",
+    "@babel/preset-env": "^7.24.5",
+    "@babel/preset-react": "^7.24.1",
+    "@babel/preset-typescript": "^7.24.1",
     "@emotion/babel-plugin": "^11.11.0",
-    "@emotion/react": "^11.11.3",
-    "@formatjs/cli": "^6.2.7",
+    "@emotion/react": "^11.11.4",
+    "@formatjs/cli": "^6.2.10",
     "@microsoft/microsoft-graph-types": "^2.40.0",
     "@types/bytes": "^3.1.4",
     "@types/mime": "^3.0.4",
-    "@types/react": "^18.2.55",
-    "@types/react-dom": "^18.2.19",
-    "@types/react-syntax-highlighter": "^15.5.11",
-    "@typescript-eslint/eslint-plugin": "^7.0.1",
-    "@typescript-eslint/parser": "^7.0.1",
+    "@types/react": "^18.3.2",
+    "@types/react-dom": "^18.3.0",
+    "@types/react-syntax-highlighter": "^15.5.13",
+    "@typescript-eslint/eslint-plugin": "^7.9.0",
+    "@typescript-eslint/parser": "^7.9.0",
     "@vitejs/plugin-react": "^4.2.1",
-    "babel-plugin-formatjs": "^10.5.13",
-    "eslint": "^8.56.0",
+    "babel-plugin-formatjs": "^10.5.14",
+    "eslint": "^8.57.0",
     "eslint-config-standard": "^17.1.0",
     "eslint-plugin-hooks": "^0.4.3",
     "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-react": "^7.33.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "postcss": "^8.4.35",
+    "eslint-plugin-react": "^7.34.1",
+    "eslint-plugin-react-hooks": "^4.6.2",
+    "eslint-plugin-sonarjs": "^1.0.3",
+    "postcss": "^8.4.38",
     "postcss-scss": "^4.0.9",
     "postcss-styled-syntax": "^0.6.4",
-    "sass": "^1.70.0",
-    "stylelint": "^16.2.1",
-    "stylelint-config-recess-order": "^4.6.0",
-    "stylelint-config-standard-scss": "^13.0.0",
-    "typescript": "^5.3.3",
-    "vite": "^5.1.1"
+    "sass": "^1.77.1",
+    "stylelint": "^16.5.0",
+    "stylelint-config-recess-order": "^5.0.1",
+    "stylelint-config-standard-scss": "^13.1.0",
+    "typescript": "^5.4.5",
+    "vite": "^5.2.11"
   },
   "volta": {
     "node": "20.11.0"
