--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "scripts": {
     "start": "vite",
     "build": "tsc && vite build",
+    "test": "jest -i --reporters default",
+    "test:ci": "jest -i --ci --collect-coverage",
     "eslint": "eslint src",
     "eslint:fix": "eslint src --fix",
     "stylelint": "stylelint 'src/**/*.{css,scss,jsx,tsx}'",
@@ -20,9 +22,9 @@
     "@automapper/pojos": "^8.8.1",
     "@azure/msal-browser": "^3.14.0",
     "@azure/msal-react": "^2.0.16",
-    "@fluentui/react-components": "^9.51.0",
-    "@fluentui/react-icons-mdl2": "^1.3.63",
-    "@fluentui/react-icons-mdl2-branded": "^1.2.65",
+    "@fluentui/react-components": "^9.51.1",
+    "@fluentui/react-icons-mdl2": "^1.3.66",
+    "@fluentui/react-icons-mdl2-branded": "^1.2.68",
     "@microsoft/applicationinsights-react-js": "^17.2.0",
     "@microsoft/applicationinsights-web": "^3.2.1",
     "@microsoft/microsoft-graph-client": "^3.0.7",
@@ -32,33 +34,39 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-error-boundary": "^4.0.13",
-    "react-hook-form": "^7.51.4",
-    "react-intl": "^6.6.6",
+    "react-hook-form": "^7.51.5",
+    "react-intl": "^6.6.8",
     "react-markdown": "^9.0.1",
     "react-router-dom": "^6.23.1",
     "react-syntax-highlighter": "^15.5.0",
     "react-use": "^17.5.0",
+    "rehype-raw": "^7.0.0",
     "remark-gfm": "^4.0.0",
     "ress": "^5.0.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.24.5",
-    "@babel/preset-env": "^7.24.5",
-    "@babel/preset-react": "^7.24.1",
-    "@babel/preset-typescript": "^7.24.1",
+    "@babel/core": "^7.24.6",
+    "@babel/preset-env": "^7.24.6",
+    "@babel/preset-react": "^7.24.6",
+    "@babel/preset-typescript": "^7.24.6",
     "@emotion/babel-plugin": "^11.11.0",
+    "@emotion/jest": "^11.11.0",
     "@emotion/react": "^11.11.4",
-    "@formatjs/cli": "^6.2.10",
+    "@formatjs/cli": "^6.2.12",
     "@microsoft/microsoft-graph-types": "^2.40.0",
+    "@testing-library/jest-dom": "^6.4.5",
+    "@testing-library/react": "^15.0.7",
     "@types/bytes": "^3.1.4",
+    "@types/jest": "^29.5.12",
     "@types/mime": "^3.0.4",
-    "@types/react": "^18.3.2",
+    "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@types/react-syntax-highlighter": "^15.5.13",
     "@typescript-eslint/eslint-plugin": "^7.9.0",
     "@typescript-eslint/parser": "^7.9.0",
     "@vitejs/plugin-react": "^4.2.1",
-    "babel-plugin-formatjs": "^10.5.14",
+    "babel-jest": "^29.7.0",
+    "babel-plugin-formatjs": "^10.5.16",
     "eslint": "^8.57.0",
     "eslint-config-standard": "^17.1.0",
     "eslint-plugin-hooks": "^0.4.3",
@@ -66,10 +74,13 @@
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-sonarjs": "^1.0.3",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "jest-junit": "^16.0.0",
     "postcss": "^8.4.38",
     "postcss-scss": "^4.0.9",
     "postcss-styled-syntax": "^0.6.4",
-    "sass": "^1.77.1",
+    "sass": "^1.77.2",
     "stylelint": "^16.5.0",
     "stylelint-config-recess-order": "^5.0.1",
     "stylelint-config-standard-scss": "^13.1.0",
