--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -3,7 +3,10 @@
   "tasks": [
     {
       "label": "tsc",
-      "group": "build",
+      "group": {
+        "kind": "build",
+        "isDefault": true
+      },
       "type": "typescript",
       "tsconfig": "tsconfig.json",
       "problemMatcher": [
