--- a/package.json
+++ b/package.json
@@ -21,40 +21,41 @@
     "@automapper/core": "^8.8.1",
     "@automapper/pojos": "^8.8.1",
     "@azure/msal-browser": "^3.14.0",
-    "@azure/msal-react": "^2.0.16",
+    "@azure/msal-react": "^2.0.22",
     "@fluentui/react-components": "^9.51.1",
-    "@fluentui/react-icons-mdl2": "^1.3.66",
-    "@fluentui/react-icons-mdl2-branded": "^1.2.68",
+    "@fluentui/react-icons-mdl2": "^1.3.72",
+    "@fluentui/react-icons-mdl2-branded": "^1.2.74",
     "@microsoft/applicationinsights-react-js": "^17.2.0",
-    "@microsoft/applicationinsights-web": "^3.2.1",
+    "@microsoft/applicationinsights-web": "^3.2.2",
     "@microsoft/microsoft-graph-client": "^3.0.7",
     "bytes": "^3.1.2",
-    "mime": "^4.0.3",
+    "mime": "^4.0.4",
     "monaco-editor": "^0.48.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-dropzone": "^14.2.3",
     "react-error-boundary": "^4.0.13",
     "react-hook-form": "^7.51.5",
     "react-intl": "^6.6.8",
     "react-markdown": "^9.0.1",
     "react-router-dom": "^6.23.1",
     "react-syntax-highlighter": "^15.5.0",
-    "react-use": "^17.5.0",
+    "react-use": "^17.5.1",
     "rehype-raw": "^7.0.0",
     "remark-gfm": "^4.0.0",
     "ress": "^5.0.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.24.6",
-    "@babel/preset-env": "^7.24.6",
-    "@babel/preset-react": "^7.24.6",
-    "@babel/preset-typescript": "^7.24.6",
+    "@babel/core": "^7.24.9",
+    "@babel/preset-env": "^7.24.8",
+    "@babel/preset-react": "^7.24.7",
+    "@babel/preset-typescript": "^7.24.7",
     "@emotion/babel-plugin": "^11.11.0",
     "@emotion/jest": "^11.11.0",
     "@emotion/react": "^11.11.4",
     "@formatjs/cli": "^6.2.12",
     "@microsoft/microsoft-graph-types": "^2.40.0",
-    "@testing-library/jest-dom": "^6.4.5",
+    "@testing-library/jest-dom": "^6.4.8",
     "@testing-library/react": "^15.0.7",
     "@types/bytes": "^3.1.4",
     "@types/jest": "^29.5.12",
@@ -71,21 +72,21 @@
     "eslint-config-standard": "^17.1.0",
     "eslint-plugin-hooks": "^0.4.3",
     "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-react": "^7.34.1",
+    "eslint-plugin-react": "^7.34.4",
     "eslint-plugin-react-hooks": "^4.6.2",
-    "eslint-plugin-sonarjs": "^1.0.3",
+    "eslint-plugin-sonarjs": "^1.0.4",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "jest-junit": "^16.0.0",
-    "postcss": "^8.4.38",
+    "postcss": "^8.4.39",
     "postcss-scss": "^4.0.9",
     "postcss-styled-syntax": "^0.6.4",
-    "sass": "^1.77.2",
+    "sass": "^1.77.8",
     "stylelint": "^16.5.0",
     "stylelint-config-recess-order": "^5.0.1",
     "stylelint-config-standard-scss": "^13.1.0",
     "typescript": "^5.4.5",
-    "vite": "^5.2.11"
+    "vite": "^5.2.13"
   },
   "volta": {
     "node": "20.11.0"
