--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -12,6 +12,7 @@
       ],
       "rules": {
         "at-rule-empty-line-before": "never",
+        "declaration-empty-line-before": "never",
         "rule-empty-line-before": "never"
       }
     }
