--- a/package.json
+++ b/package.json
@@ -76,11 +76,11 @@
     "eslint-plugin-react": "^7.35.0",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-sonarjs": "^1.0.4",
+    "eslint-plugin-testing-library": "^6.2.2",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "jest-junit": "^16.0.0",
     "postcss": "^8.4.41",
-    "postcss-scss": "^4.0.9",
     "postcss-styled-syntax": "^0.6.4",
     "sass": "^1.77.8",
     "stylelint": "^16.8.1",
