--- a/babel.config.json
+++ b/babel.config.json
@@ -4,8 +4,8 @@
     [
       "formatjs",
       {
-        "idInterpolationPattern": "[sha512:contenthash:base64:6]",
-        "ast": true
+        "ast": true,
+        "idInterpolationPattern": "[sha512:contenthash:base64:6]"
       }
     ]
   ],
