--- a/package.json
+++ b/package.json
@@ -22,13 +22,15 @@
     "@automapper/pojos": "^8.8.1",
     "@azure/msal-browser": "^3.24.0",
     "@azure/msal-react": "^2.1.0",
-    "@fluentui/react-components": "^9.54.16",
-    "@fluentui/react-icons-mdl2": "^1.3.75",
-    "@fluentui/react-icons-mdl2-branded": "^1.2.77",
-    "@microsoft/applicationinsights-react-js": "^17.3.2",
-    "@microsoft/applicationinsights-web": "^3.3.2",
+    "@fluentui/react-components": "^9.54.17",
+    "@fluentui/react-icons-mdl2": "^1.3.76",
+    "@fluentui/react-icons-mdl2-branded": "^1.2.78",
+    "@microsoft/applicationinsights-react-js": "^17.3.3",
+    "@microsoft/applicationinsights-web": "^3.3.3",
     "@microsoft/microsoft-graph-client": "^3.0.7",
     "bytes": "^3.1.2",
+    "dompurify": "<3.1.7",
+    "mermaid": "^11.2.1",
     "mime": "^4.0.4",
     "monaco-editor": "^0.52.0",
     "react": "^18.3.1",
@@ -51,6 +53,7 @@
     "@babel/preset-react": "^7.24.7",
     "@babel/preset-typescript": "^7.24.7",
     "@emotion/babel-plugin": "^11.12.0",
+    "@emotion/babel-preset-css-prop": "^11.12.0",
     "@emotion/jest": "^11.13.0",
     "@emotion/react": "^11.13.3",
     "@eslint/compat": "^1.1.1",
@@ -60,39 +63,39 @@
     "@microsoft/microsoft-graph-types": "^2.40.0",
     "@stylistic/eslint-plugin": "^2.8.0",
     "@testing-library/jest-dom": "^6.5.0",
-    "@testing-library/react": "^15.0.7",
+    "@testing-library/react": "^16.0.1",
     "@testing-library/user-event": "^14.5.2",
     "@types/bytes": "^3.1.4",
     "@types/jest": "^29.5.13",
-    "@types/mime": "^3.0.4",
-    "@types/react": "^18.3.8",
+    "@types/mime": "^4.0.0",
+    "@types/react": "^18.3.10",
     "@types/react-dom": "^18.3.0",
     "@types/react-syntax-highlighter": "^15.5.13",
-    "@typescript-eslint/eslint-plugin": "^7.18.0",
-    "@typescript-eslint/parser": "^7.18.0",
-    "@vitejs/plugin-react": "^4.3.1",
+    "@typescript-eslint/eslint-plugin": "^8.8.0",
+    "@typescript-eslint/parser": "^8.8.0",
+    "@vitejs/plugin-react": "^4.3.2",
     "babel-jest": "^29.7.0",
     "babel-plugin-formatjs": "^10.5.16",
     "eslint": "^8.57.1",
     "eslint-plugin-hooks": "^0.4.3",
-    "eslint-plugin-react": "^7.36.1",
+    "eslint-plugin-react": "^7.37.1",
     "eslint-plugin-react-hooks": "^4.6.2",
-    "eslint-plugin-sonarjs": "^1.0.4",
+    "eslint-plugin-sonarjs": "^2.0.3",
     "eslint-plugin-testing-library": "^6.3.0",
-    "globals": "^15.9.0",
+    "globals": "^15.10.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "jest-junit": "^16.0.0",
     "postcss": "^8.4.47",
     "postcss-styled-syntax": "^0.6.4",
-    "sass": "^1.79.3",
+    "sass": "^1.79.4",
     "stylelint": "^16.9.0",
     "stylelint-config-recess-order": "^5.1.1",
     "stylelint-config-standard-scss": "^13.1.0",
     "typescript": "^5.6.2",
-    "vite": "^5.4.7"
+    "vite": "^5.4.8"
   },
   "volta": {
-    "node": "20.16.0"
+    "node": "20.17.0"
   }
 }
