--- a/package.json
+++ b/package.json
@@ -22,77 +22,78 @@
     "@automapper/pojos": "^8.8.1",
     "@azure/msal-browser": "^3.26.1",
     "@azure/msal-react": "^2.1.1",
-    "@fluentui/react-components": "^9.55.0",
-    "@fluentui/react-icons-mdl2": "^1.3.78",
-    "@fluentui/react-icons-mdl2-branded": "^1.2.80",
-    "@microsoft/applicationinsights-react-js": "^17.3.3",
-    "@microsoft/applicationinsights-web": "^3.3.3",
+    "@fluentui/react-components": "^9.55.1",
+    "@fluentui/react-icons-mdl2": "^1.3.80",
+    "@fluentui/react-icons-mdl2-branded": "^1.2.82",
+    "@microsoft/applicationinsights-react-js": "^17.3.4",
+    "@microsoft/applicationinsights-web": "^3.3.4",
     "@microsoft/microsoft-graph-client": "^3.0.7",
     "bytes": "^3.1.2",
-    "mermaid": "^11.3.0",
+    "mermaid": "^11.4.0",
     "mime": "^4.0.4",
     "monaco-editor": "^0.52.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-dropzone": "^14.2.9",
-    "react-error-boundary": "^4.0.13",
-    "react-hook-form": "^7.53.0",
-    "react-intl": "^6.7.2",
+    "react-dropzone": "^14.3.1",
+    "react-error-boundary": "^4.1.2",
+    "react-hook-form": "^7.53.1",
+    "react-intl": "^6.8.4",
     "react-markdown": "^9.0.1",
-    "react-router-dom": "^6.26.2",
-    "react-syntax-highlighter": "^15.5.0",
+    "react-router-dom": "^6.27.0",
+    "react-syntax-highlighter": "^15.6.1",
     "react-use": "^17.5.1",
     "rehype-raw": "^7.0.0",
     "remark-gfm": "^4.0.0",
     "ress": "^5.0.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.25.7",
-    "@babel/preset-env": "^7.25.7",
-    "@babel/preset-react": "^7.25.7",
-    "@babel/preset-typescript": "^7.25.7",
+    "@babel/core": "^7.26.0",
+    "@babel/preset-env": "^7.26.0",
+    "@babel/preset-react": "^7.25.9",
+    "@babel/preset-typescript": "^7.26.0",
     "@emotion/babel-plugin": "^11.12.0",
     "@emotion/babel-preset-css-prop": "^11.12.0",
     "@emotion/jest": "^11.13.0",
     "@emotion/react": "^11.13.3",
     "@eslint/compat": "1.1.1",
     "@eslint/eslintrc": "^3.1.0",
-    "@eslint/js": "^9.12.0",
-    "@formatjs/cli": "^6.2.14",
+    "@eslint/js": "^9.14.0",
+    "@formatjs/cli": "^6.3.5",
     "@microsoft/microsoft-graph-types": "^2.40.0",
-    "@stylistic/eslint-plugin": "^2.9.0",
-    "@testing-library/jest-dom": "^6.5.0",
+    "@stylistic/eslint-plugin": "^2.10.1",
+    "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.0.1",
     "@testing-library/user-event": "^14.5.2",
     "@types/bytes": "^3.1.4",
-    "@types/jest": "^29.5.13",
+    "@types/jest": "^29.5.14",
     "@types/mime": "^4.0.0",
-    "@types/react": "^18.3.11",
-    "@types/react-dom": "^18.3.0",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
     "@types/react-syntax-highlighter": "^15.5.13",
-    "@typescript-eslint/eslint-plugin": "^8.8.1",
-    "@typescript-eslint/parser": "^8.8.1",
-    "@vitejs/plugin-react": "^4.3.2",
+    "@typescript-eslint/eslint-plugin": "^8.12.2",
+    "@typescript-eslint/parser": "^8.12.2",
+    "@vitejs/plugin-react": "^4.3.3",
     "babel-jest": "^29.7.0",
-    "babel-plugin-formatjs": "^10.5.17",
+    "babel-plugin-formatjs": "^10.5.22",
     "eslint": "^8.57.1",
     "eslint-plugin-hooks": "^0.4.3",
-    "eslint-plugin-react": "^7.37.1",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
+    "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^4.6.2",
-    "eslint-plugin-sonarjs": "^2.0.3",
-    "eslint-plugin-testing-library": "^6.3.0",
+    "eslint-plugin-sonarjs": "^2.0.4",
+    "eslint-plugin-testing-library": "^6.4.0",
     "globals": "^15.11.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "jest-junit": "^16.0.0",
     "postcss": "^8.4.47",
     "postcss-styled-syntax": "^0.6.4",
-    "sass": "^1.79.4",
-    "stylelint": "^16.9.0",
+    "sass": "^1.80.6",
+    "stylelint": "^16.10.0",
     "stylelint-config-recess-order": "^5.1.1",
     "stylelint-config-standard-scss": "^13.1.0",
     "typescript": "^5.6.3",
-    "vite": "^5.4.8"
+    "vite": "^5.4.10"
   },
   "volta": {
     "node": "20.18.0"
