--- a/package.json
+++ b/package.json
@@ -22,14 +22,13 @@
     "@automapper/pojos": "^8.8.1",
     "@azure/msal-browser": "^3.27.0",
     "@azure/msal-react": "^2.2.0",
-    "@fluentui/react-components": "^9.56.0",
-    "@fluentui/react-icons-mdl2": "^1.3.80",
-    "@fluentui/react-icons-mdl2-branded": "^1.2.82",
+    "@fluentui/react-components": "^9.56.3",
+    "@fluentui/react-icons": "^2.0.266",
     "@microsoft/applicationinsights-react-js": "^17.3.4",
     "@microsoft/applicationinsights-web": "^3.3.4",
     "@microsoft/microsoft-graph-client": "^3.0.7",
     "bytes": "^3.1.2",
-    "mermaid": "^11.4.0",
+    "mermaid": "^11.4.1",
     "mime": "^4.0.4",
     "monaco-editor": "^0.52.0",
     "react": "^18.3.1",
@@ -37,9 +36,10 @@
     "react-dropzone": "^14.3.5",
     "react-error-boundary": "^4.1.2",
     "react-hook-form": "^7.53.2",
-    "react-intl": "^6.8.7",
+    "react-icons": "^5.3.0",
+    "react-intl": "^7.0.1",
     "react-markdown": "^9.0.1",
-    "react-router-dom": "^6.28.0",
+    "react-router-dom": "^7.0.1",
     "react-syntax-highlighter": "^15.6.1",
     "react-use": "^17.5.1",
     "rehype-raw": "^7.0.0",
@@ -51,16 +51,16 @@
     "@babel/preset-env": "^7.26.0",
     "@babel/preset-react": "^7.25.9",
     "@babel/preset-typescript": "^7.26.0",
-    "@emotion/babel-plugin": "^11.12.0",
+    "@emotion/babel-plugin": "^11.13.5",
     "@emotion/babel-preset-css-prop": "^11.12.0",
     "@emotion/jest": "^11.13.0",
-    "@emotion/react": "^11.13.3",
-    "@eslint/compat": "1.1.1",
-    "@eslint/eslintrc": "^3.1.0",
-    "@eslint/js": "^9.14.0",
-    "@formatjs/cli": "^6.3.8",
+    "@emotion/react": "^11.13.5",
+    "@eslint/compat": "1.2.3",
+    "@eslint/eslintrc": "^3.2.0",
+    "@eslint/js": "^9.16.0",
+    "@formatjs/cli": "^6.3.11",
     "@microsoft/microsoft-graph-types": "^2.40.0",
-    "@stylistic/eslint-plugin": "^2.10.1",
+    "@stylistic/eslint-plugin": "^2.11.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.0.1",
     "@testing-library/user-event": "^14.5.2",
@@ -70,30 +70,29 @@
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@types/react-syntax-highlighter": "^15.5.13",
-    "@typescript-eslint/eslint-plugin": "^8.13.0",
-    "@typescript-eslint/parser": "^8.13.0",
-    "@vitejs/plugin-react": "^4.3.3",
+    "@typescript-eslint/eslint-plugin": "^8.17.0",
+    "@typescript-eslint/parser": "^8.17.0",
+    "@vitejs/plugin-react": "^4.3.4",
     "babel-jest": "^29.7.0",
-    "babel-plugin-formatjs": "^10.5.24",
-    "eslint": "^8.57.1",
+    "babel-plugin-formatjs": "^10.5.26",
+    "eslint": "^9.16.0",
     "eslint-plugin-hooks": "^0.4.3",
     "eslint-plugin-jsx-a11y": "^6.10.2",
     "eslint-plugin-react": "^7.37.2",
-    "eslint-plugin-react-hooks": "^4.6.2",
-    "eslint-plugin-sonarjs": "^2.0.4",
-    "eslint-plugin-testing-library": "^6.4.0",
-    "globals": "^15.12.0",
+    "eslint-plugin-react-hooks": "^5.0.0",
+    "eslint-plugin-sonarjs": "^3.0.0",
+    "eslint-plugin-testing-library": "^7.0.0",
+    "globals": "^15.13.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "jest-junit": "^16.0.0",
-    "postcss": "^8.4.48",
+    "postcss": "^8.4.49",
     "postcss-styled-syntax": "^0.7.0",
-    "sass": "^1.80.6",
-    "stylelint": "^16.10.0",
+    "stylelint": "^16.11.0",
     "stylelint-config-recess-order": "^5.1.1",
-    "stylelint-config-standard-scss": "^13.1.0",
-    "typescript": "^5.6.3",
-    "vite": "^5.4.11"
+    "stylelint-config-standard-scss": "^14.0.0",
+    "typescript": "^5.7.2",
+    "vite": "^6.0.2"
   },
   "volta": {
     "node": "20.18.0"
