--- a/package.json
+++ b/package.json
@@ -20,9 +20,9 @@
   "dependencies": {
     "@automapper/core": "^8.8.1",
     "@automapper/pojos": "^8.8.1",
-    "@azure/msal-browser": "^4.7.0",
-    "@azure/msal-react": "^3.0.6",
-    "@fluentui/react-components": "^9.60.1",
+    "@azure/msal-browser": "^4.8.0",
+    "@azure/msal-react": "^3.0.7",
+    "@fluentui/react-components": "^9.61.2",
     "@fluentui/react-icons": "^2.0.292",
     "@microsoft/applicationinsights-react-js": "^18.3.6",
     "@microsoft/applicationinsights-web": "^3.3.6",
@@ -39,7 +39,7 @@
     "react-icons": "^5.5.0",
     "react-intl": "^7.1.6",
     "react-markdown": "^10.1.0",
-    "react-router-dom": "^7.3.0",
+    "react-router-dom": "^7.4.0",
     "react-syntax-highlighter": "^15.6.1",
     "react-use": "^17.6.0",
     "rehype-raw": "^7.0.0",
@@ -61,7 +61,7 @@
     "@testing-library/user-event": "^14.6.1",
     "@types/bytes": "^3.1.5",
     "@types/mime": "^4.0.0",
-    "@types/react": "^18.3.18",
+    "@types/react": "^18.3.19",
     "@types/react-dom": "^18.3.5",
     "@types/react-syntax-highlighter": "^15.5.13",
     "@vitejs/plugin-react": "^4.3.4",
@@ -82,9 +82,14 @@
     "stylelint-config-recess-order": "^6.0.0",
     "stylelint-config-standard-scss": "^14.0.0",
     "typescript": "^5.8.2",
-    "typescript-eslint": "^8.26.1",
+    "typescript-eslint": "^8.27.0",
     "vite": "^6.2.2",
     "vitest": "^3.0.9"
+  },
+  "overrides": {
+    "react-syntax-highlighter": {
+      "prismjs": "^1.30.0"
+    }
   },
   "volta": {
     "node": "20.18.1"
