--- a/.env
+++ b/.env
@@ -1,4 +1,3 @@
-VITE_MSAL_AUTHORITY=https://login.microsoftonline.com/{{MSAL_TENANT_ID}}
-VITE_MSAL_CLIENT_ID={{MSAL_APP_ID}}
-VITE_PUBLIC_URL=https://{{HOST_NAME}}
+VITE_MSAL_AUTHORITY=https://login.microsoftonline.com/{{MICROSOFT_TENANT_ID}}
+VITE_MSAL_CLIENT_ID={{MICROSOFT_APP_ID}}
 VITE_TELEMETRY_CONNECTION_STRING={{TELEMETRY_CONNECTION_STRING}}
