--- a/.github/workflows/build-source.yml
+++ b/.github/workflows/build-source.yml
@@ -1,18 +1,12 @@
 name: Build source
 
-on:
-  workflow_call:
-    inputs:
-      environment:
-        required: true
-        type: string
+on: workflow_call
 
 permissions: {}
 
 jobs:
   run:
     name: Run
-    environment: ${{inputs.environment}}
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repos
@@ -27,7 +21,7 @@ jobs:
         shell: pwsh
         run: |
           $content = Get-Content -Path ${{env.FILE_PATH}}
-          $content = $content -replace "{{MSAL_APP_ID}}", "${{vars.MSAL_APP_ID}}"
+          $content = $content -replace "{{MICROSOFT_APP_ID}}", "${{vars.MICROSOFT_APP_ID}}"
           Out-File -FilePath ${{env.FILE_PATH}} -InputObject $content -Encoding UTF8
         env:
           FILE_PATH: public/.well-known/microsoft-identity-association.json
@@ -36,9 +30,8 @@ jobs:
         run: |
           $content = Get-Content -Path ${{env.FILE_PATH}}
           $content = $content -Replace "{{TELEMETRY_CONNECTION_STRING}}", "${{vars.TELEMETRY_CONNECTION_STRING}}"
-          $content = $content -Replace "{{MSAL_TENANT_ID}}", "${{vars.MSAL_TENANT_ID}}"
-          $content = $content -Replace "{{MSAL_APP_ID}}", "${{vars.MSAL_APP_ID}}"
-          $content = $content -Replace "{{HOST_NAME}}", "${{vars.HOST_NAME}}"
+          $content = $content -Replace "{{MICROSOFT_TENANT_ID}}", "${{vars.MICROSOFT_TENANT_ID}}"
+          $content = $content -Replace "{{MICROSOFT_APP_ID}}", "${{vars.MICROSOFT_APP_ID}}"
           Out-File -FilePath ${{env.FILE_PATH}} -InputObject $content -Encoding UTF8
         env:
           FILE_PATH: .env
