--- a/package.json
+++ b/package.json
@@ -20,27 +20,28 @@
   "dependencies": {
     "@automapper/core": "^8.8.1",
     "@automapper/pojos": "^8.8.1",
-    "@azure/msal-browser": "^4.12.0",
-    "@azure/msal-react": "^3.0.12",
-    "@fluentui/react-components": "^9.64.0",
-    "@fluentui/react-icons": "^2.0.301",
+    "@azure/msal-browser": "^4.21.1",
+    "@azure/msal-react": "^3.0.19",
+    "@fluentui/react-components": "^9.69.0",
+    "@fluentui/react-icons": "^2.0.308",
     "@microsoft/applicationinsights-react-js": "^18.3.6",
-    "@microsoft/applicationinsights-web": "^3.3.8",
+    "@microsoft/applicationinsights-web": "^3.3.9",
     "@microsoft/microsoft-graph-client": "^3.0.7",
     "bytes": "^3.1.2",
-    "mermaid": "^11.6.0",
+    "mermaid": "^11.10.1",
     "mime": "^4.0.7",
     "monaco-editor": "^0.52.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.3.8",
     "react-error-boundary": "^6.0.0",
-    "react-hook-form": "^7.56.4",
+    "react-helmet-async": "^2.0.5",
+    "react-hook-form": "^7.62.0",
     "react-icons": "^5.5.0",
     "react-intl": "^7.1.11",
     "react-markdown": "^10.1.0",
-    "react-router-dom": "^7.6.1",
-    "react-syntax-highlighter": "^15.6.1",
+    "react-router-dom": "^7.8.2",
+    "react-syntax-highlighter": "^15.6.6",
     "react-use": "^17.6.0",
     "rehype-raw": "^7.0.0",
     "remark-gfm": "^4.0.1",
@@ -50,41 +51,41 @@
     "@emotion/babel-plugin": "^11.13.5",
     "@emotion/jest": "^11.13.0",
     "@emotion/react": "^11.14.0",
-    "@eslint/compat": "1.2.9",
+    "@eslint/compat": "1.3.2",
     "@eslint/eslintrc": "^3.3.1",
-    "@eslint/js": "^9.27.0",
-    "@formatjs/cli": "^6.7.1",
+    "@eslint/js": "^9.34.0",
+    "@formatjs/cli": "^6.7.2",
     "@microsoft/microsoft-graph-types": "^2.40.0",
-    "@stylistic/eslint-plugin": "^4.4.0",
-    "@testing-library/jest-dom": "^6.6.3",
+    "@stylistic/eslint-plugin": "^5.2.3",
+    "@testing-library/jest-dom": "^6.8.0",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
     "@types/bytes": "^3.1.5",
     "@types/mime": "^4.0.0",
-    "@types/react": "^18.3.23",
+    "@types/react": "^18.3.24",
     "@types/react-dom": "^18.3.7",
     "@types/react-syntax-highlighter": "^15.5.13",
-    "@vitejs/plugin-react": "^4.5.0",
-    "@vitest/coverage-v8": "^3.1.4",
-    "babel-plugin-formatjs": "^10.5.38",
-    "eslint": "^9.27.0",
+    "@vitejs/plugin-react": "^5.0.1",
+    "@vitest/coverage-v8": "^3.2.4",
+    "babel-plugin-formatjs": "^10.5.39",
+    "eslint": "^9.34.0",
     "eslint-plugin-hooks": "^0.4.3",
     "eslint-plugin-jsx-a11y": "^6.10.2",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-sonarjs": "^3.0.2",
-    "eslint-plugin-testing-library": "^7.2.2",
-    "globals": "^16.2.0",
+    "eslint-plugin-sonarjs": "^3.0.5",
+    "eslint-plugin-testing-library": "^7.6.6",
+    "globals": "^16.3.0",
     "jsdom": "^26.1.0",
-    "postcss": "^8.5.3",
+    "postcss": "^8.5.6",
     "postcss-styled-syntax": "^0.7.1",
-    "stylelint": "^16.19.1",
-    "stylelint-config-recess-order": "^6.0.0",
+    "stylelint": "^16.23.1",
+    "stylelint-config-recess-order": "^7.2.0",
     "stylelint-config-standard-scss": "^15.0.1",
-    "typescript": "^5.8.3",
-    "typescript-eslint": "^8.33.0",
-    "vite": "^6.3.5",
-    "vitest": "^3.1.4"
+    "typescript": "^5.9.2",
+    "typescript-eslint": "^8.41.0",
+    "vite": "^7.1.3",
+    "vitest": "^3.2.4"
   },
   "overrides": {
     "react-syntax-highlighter": {
