--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-# https://github.com/github/gitignore/blob/main/Global/Windows.gitignore
+### https://github.com/github/gitignore/blob/main/Global/Windows.gitignore
 
 # Windows thumbnail cache files
 Thumbs.db
@@ -25,10 +25,11 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
-# https://github.com/github/gitignore/blob/main/Global/macOS.gitignore
+### https://github.com/github/gitignore/blob/main/Global/macOS.gitignore
 
 # General
 .DS_Store
+__MACOSX/
 .AppleDouble
 .LSOverride
 
@@ -51,7 +52,7 @@ Network Trash Folder
 Temporary Items
 .apdisk
 
-# https://github.com/github/gitignore/blob/main/Node.gitignore
+### https://github.com/github/gitignore/blob/main/Node.gitignore
 
 # Logs
 logs
@@ -60,7 +61,6 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 lerna-debug.log*
-.pnpm-debug.log*
 
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
@@ -112,12 +112,6 @@ web_modules/
 # Optional stylelint cache
 .stylelintcache
 
-# Microbundle cache
-.rpt2_cache/
-.rts2_cache_cjs/
-.rts2_cache_es/
-.rts2_cache_umd/
-
 # Optional REPL history
 .node_repl_history
 
@@ -128,10 +122,9 @@ web_modules/
 .yarn-integrity
 
 # dotenv environment variable files
-.env.development.local
-.env.test.local
-.env.production.local
-.env.local
+.env
+.env.*
+!.env.example
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
@@ -144,6 +137,7 @@ out
 # Nuxt.js build / generate output
 .nuxt
 dist
+.output
 
 # Gatsby files
 .cache/
@@ -158,6 +152,15 @@ dist
 .temp
 .cache
 
+# Sveltekit cache directory
+.svelte-kit/
+
+# vitepress build output
+**/.vitepress/dist
+
+# vitepress cache directory
+**/.vitepress/cache
+
 # Docusaurus cache and generated files
 .docusaurus
 
@@ -170,15 +173,25 @@ dist
 # DynamoDB Local files
 .dynamodb/
 
+# Firebase cache directory
+.firebase/
+
 # TernJS port file
 .tern-port
 
 # Stores VSCode versions used for testing VSCode extensions
 .vscode-test
 
-# yarn v2
-.yarn/cache
-.yarn/unplugged
-.yarn/build-state.yml
-.yarn/install-state.gz
+# yarn v3
 .pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
+
+# Vite files
+vite.config.js.timestamp-*
+vite.config.ts.timestamp-*
+.vite/
