--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
       "url": "https://localhost:5173",
       "webRoot": "${workspaceFolder}",
       "runtimeArgs": [
-        "-incognito"
+        "--guest"
       ],
       "preLaunchTask": "react-start",
       "postDebugTask": "react-terminate"
