--- a/package.json
+++ b/package.json
@@ -20,27 +20,27 @@
   "dependencies": {
     "@automapper/core": "^8.8.1",
     "@automapper/pojos": "^8.8.1",
-    "@azure/msal-browser": "^4.24.1",
+    "@azure/msal-browser": "^4.25.1",
     "@azure/msal-react": "^3.0.20",
-    "@fluentui/react-components": "^9.70.0",
-    "@fluentui/react-icons": "^2.0.311",
+    "@fluentui/react-components": "^9.72.3",
+    "@fluentui/react-icons": "^2.0.313",
     "@microsoft/applicationinsights-react-js": "^18.3.6",
     "@microsoft/applicationinsights-web": "^3.3.10",
     "@microsoft/microsoft-graph-client": "^3.0.7",
     "bytes": "^3.1.2",
-    "mermaid": "^11.12.0",
+    "mermaid": "^11.12.1",
     "mime": "^4.1.0",
-    "monaco-editor": "^0.53.0",
+    "monaco-editor": "^0.54.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.3.8",
     "react-error-boundary": "^6.0.0",
     "react-helmet-async": "^2.0.5",
-    "react-hook-form": "^7.63.0",
+    "react-hook-form": "^7.65.0",
     "react-icons": "^5.5.0",
-    "react-intl": "^7.1.11",
+    "react-intl": "^7.1.14",
     "react-markdown": "^10.1.0",
-    "react-router-dom": "^7.9.3",
+    "react-router-dom": "^7.9.4",
     "react-syntax-highlighter": "^15.6.6",
     "react-use": "^17.6.0",
     "rehype-raw": "^7.0.0",
@@ -53,41 +53,44 @@
     "@emotion/react": "^11.14.0",
     "@eslint/compat": "1.4.0",
     "@eslint/eslintrc": "^3.3.1",
-    "@eslint/js": "^9.36.0",
-    "@formatjs/cli": "^6.7.2",
-    "@microsoft/microsoft-graph-types": "^2.43.0",
-    "@stylistic/eslint-plugin": "^5.4.0",
+    "@eslint/js": "^9.38.0",
+    "@formatjs/cli": "^6.7.4",
+    "@microsoft/microsoft-graph-types": "^2.43.1",
+    "@stylistic/eslint-plugin": "^5.5.0",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
     "@types/bytes": "^3.1.5",
     "@types/mime": "^4.0.0",
-    "@types/react": "^18.3.25",
+    "@types/react": "^18.3.26",
     "@types/react-dom": "^18.3.7",
     "@types/react-syntax-highlighter": "^15.5.13",
-    "@vitejs/plugin-react": "^5.0.4",
-    "@vitest/coverage-v8": "^3.2.4",
-    "babel-plugin-formatjs": "^10.5.39",
-    "eslint": "^9.36.0",
+    "@vitejs/plugin-react": "^5.1.0",
+    "@vitest/coverage-v8": "^4.0.4",
+    "babel-plugin-formatjs": "^10.5.41",
+    "eslint": "^9.38.0",
     "eslint-plugin-hooks": "^0.4.3",
     "eslint-plugin-jsx-a11y": "^6.10.2",
     "eslint-plugin-react": "^7.37.5",
-    "eslint-plugin-react-hooks": "^6.1.0",
+    "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-sonarjs": "^3.0.5",
-    "eslint-plugin-testing-library": "^7.11.0",
+    "eslint-plugin-testing-library": "^7.13.3",
     "globals": "^16.4.0",
-    "jsdom": "^27.0.0",
+    "jsdom": "^27.0.1",
     "postcss": "^8.5.6",
     "postcss-styled-syntax": "^0.7.1",
-    "stylelint": "^16.24.0",
-    "stylelint-config-recess-order": "^7.3.0",
+    "stylelint": "^16.25.0",
+    "stylelint-config-recess-order": "^7.4.0",
     "stylelint-config-standard-scss": "^16.0.0",
     "typescript": "^5.9.3",
-    "typescript-eslint": "^8.45.0",
-    "vite": "^7.1.7",
-    "vitest": "^3.2.4"
+    "typescript-eslint": "^8.46.2",
+    "vite": "^7.1.12",
+    "vitest": "^4.0.4"
   },
   "overrides": {
+    "monaco-editor": {
+      "dompurify": "^3.2.4"
+    },
     "react-syntax-highlighter": {
       "prismjs": "^1.30.0"
     }
